crates/toml_edit/tests/snapshots/invalid/key/dotted-redefine-table-01.stderr
TOML parse error at line 2, column 1
  |
2 | a.b = true
  | ^
cannot extend value of type boolean with a dotted key
